--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
         <button>Send</button>
       </div>
     </div>
-    <div class="codingnexus">
+    <div class="huberdev">
       <a href="https://huber.dev">Created by Zeppeli.io</a>
     </div>
     <script src="./main.js?v=5"></script>
